--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,17 +14,19 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
+  <header class="main-header" data-test="header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo" href="index.html">
+      <a class="main-header__logo main-header__logo--picture" href="index.html">
         <picture>
           <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg">
           <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo/logo-tablet.svg">
-          <img class="main-header__logo-picture" src="images/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+          <img class="main-header__logo main-header__logo-picture" src="images/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
         </picture>
+      </a>
+      <a class="main-header__logo main-header__logo--text" href="index.html">
         <picture>
           <source width="118" height="21" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-text.svg">
-          <img class="main-header__logo-name" src="images/logo/logo-text.svg" width="101" height="18" alt="Cat Energy">
+          <img class="main-header__logo main-header__logo-name" src="images/logo/logo-text.svg" width="101" height="18" alt="Cat Energy">
         </picture>
       </a>
       <nav class="main-nav">
@@ -32,15 +34,15 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="index.html">Главная</a></li>
-          <li class="main-nav__item main-nav__item--current"><a href="#">Каталог продукции</a></li>
-          <li class="main-nav__item"><a href="#">Подбор программы</a></li>
+          <li class="main-nav__item main-nav__item-catalog"><a href="index.html">Главная</a></li>
+          <li class="main-nav__item main-nav__item-catalog main-nav__item--current"><a href="#">Каталог продукции</a></li>
+          <li class="main-nav__item main-nav__item-catalog"><a href="#">Подбор программы</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main class="main-container">
-    <section class="catalog">
+    <section class="catalog" data-test="catalog">
       <div class="catalog__wrapper">
         <h1 class="catalog__title">Каталог продукции</h1>
         <ul class="catalog__list">
@@ -180,7 +182,7 @@
         </ul>
       </div>
     </section>
-    <section class="catalog-additionally">
+    <section class="catalog-additionally" data-test="additional">
       <h2 class="catalog-additionally__title">Дополнительные товары</h2>
       <div class="catalog-additionally__wrapper">
         <ul class="catalog-additionally__list">
@@ -201,8 +203,7 @@
           </li>
           <li class="catalog-additionally__item">
             <h3 class="catalog-additionally__caption">Витамины</h3>
-            <p class="catalog-additionally__text">1 упаковка (30 г)</p>
-            <p class="catalog-additionally__text">300 ₽</p>
+            <p class="catalog-additionally__text">1 упаковка (30 г) <span>300 ₽</span></p>
             <a class="catalog-additionally__button button-primary" href="#">Заказать</a>
           </li>
         </ul>
@@ -222,12 +223,14 @@
         </form>
       </div>
     </section>
-    <section class="contacts map">
-      <div class="contacts__wrapper">
+    <section class="contacts map" data-test="contacts">
+      <div class="contacts__wrapper contacts__wrapper-catalog">
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__description">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="contacts__adress">Санкт-Петербург</p>
+        <p class="contacts__description">Приглашаем<br>к сотрудничеству дилеров!</p>
+        <address class="contacts__adress">
+          <p class="contacts__adress-description">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__adress-description">Санкт-Петербург</p>
+        </address>
       </div>
       <div class="map__wrapper">
         <picture>
@@ -235,12 +238,13 @@
           <source width="768" height="400" type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x">
           <img class="map__location" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Карта с местоположением офиса">
         </picture>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4753.526179166685!2d30.32355764841993!3d59.93858748165086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1716911425965!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
-  <footer class="main-footer">
+  <footer class="main-footer" data-test="footer">
     <div class="main-footer__wrapper">
-      <a class="logo" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span>
+      <a class="main-footer-logo" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span>
         <img class="main-footer__logo-name" src="images/logo/logo-text.svg" width="128" height="24" alt="Cat Energy">
       </a>
       <ul class="main-footer-list">
@@ -258,7 +262,7 @@
         </li>
       </ul>
       <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <span>«HTML Academy»</span>
+        <span>HTML Academy</span>
       </a>
     </div>
   </footer>
