--- a/source/index.html
+++ b/source/index.html
@@ -14,24 +14,26 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
+  <header class="main-header" data-test="header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo" href="index.html">
+      <a class="main-header__logo main-header__logo--picture" href="index.html">
         <picture>
           <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-desktop.svg">
           <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo/logo-tablet.svg">
-          <img class="main-header__logo-picture" src="images/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+          <img class="main-header__logo main-header__logo-picture" src="images/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
         </picture>
+      </a>
+      <a class="main-header__logo main-header__logo--text" href="index.html">
         <picture>
           <source width="118" height="21" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo/logo-text.svg">
-          <img class="main-header__logo-name" src="images/logo/logo-text.svg" width="101" height="18" alt="Cat Energy">
+          <img class="main-header__logo main-header__logo-name" src="images/logo/logo-text.svg" width="101" height="18" alt="Cat Energy">
         </picture>
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle main-nav__toggle--close" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <ul class="main-nav__list">
+        <ul class="main-nav__list main-nav__list--open">
           <li class="main-nav__item main-nav__item--current"><a href="#">Главная</a></li>
           <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="#">Подбор программы</a></li>
@@ -41,7 +43,7 @@
   </header>
   <main class="main-container">
     <h1 class="visually-hidden">«Кэт энерджи» подбор функциональной программы питания для котов</h1>
-    <section class="promo">
+    <section class="promo" data-test="hero">
       <div class="promo__wrapper">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
@@ -53,7 +55,7 @@
         <a class="promo__button button-primary" href="#">Подобрать программу</a>
       </div>
     </section>
-    <section class="programs">
+    <section class="programs" data-test="programs">
       <div class="programs__wrapper">
         <ul class="programs__list">
           <li class="programs__item programs__item--slim">
@@ -69,7 +71,7 @@
         </ul>
       </div>
     </section>
-    <section class="advantages">
+    <section class="advantages" data-test="features">
       <div class="advantages__wrapper">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
@@ -88,7 +90,7 @@
         </ul>
       </div>
     </section>
-    <section class="example">
+    <section class="example" data-test="proof">
       <div class="example__wrapper">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -106,26 +108,32 @@
           <p class="example__comment">Затраты на питание: <span class="example__comment-number">15 000 руб.</span></p>
         </div>
         <div class="example__slider">
-          <picture>
-            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/slider-before-tablet-desktop@1x.png 1x, images/slider-before-tablet-desktop@2x.png 2x">
-            <img class="example__slider-image" src="images/slider-before-mobile@1x.png" srcset="images/slider-before-mobile@2x.png 2x" width="280" height="256" alt="Фотография до: кот с лишним весом">
-          </picture>
-          <picture>
-            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/slider-after-tablet-desktop@1x.png 1x, images/slider-after-tablet-desktop@2x.png 2x">
-            <img class="example__slider-image" src="images/slider-after-mobile@1x.png" srcset="images/slider-after-mobile@2x.png 2x" width="280" height="256" alt="Фотография после: худой кот">
-          </picture>
+          <div class="example__slider-before">
+            <picture>
+              <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/slider-before-tablet-desktop@1x.png 1x, images/slider-before-tablet-desktop@2x.png 2x">
+              <img class="example__slider-image" src="images/slider-before-mobile@1x.png" srcset="images/slider-before-mobile@2x.png 2x" width="280" height="256" alt="Фотография до: кот с лишним весом">
+            </picture>
+          </div>
+          <div class="example__slider-after">
+            <picture>
+              <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/slider-after-tablet-desktop@1x.png 1x, images/slider-after-tablet-desktop@2x.png 2x">
+              <img class="example__slider-image" src="images/slider-after-mobile@1x.png" srcset="images/slider-after-mobile@2x.png 2x" width="280" height="256" alt="Фотография после: худой кот">
+            </picture>
+          </div>
           <button class="example__slider-button" type="button">
             <span class="visually-hidden">Передвинуть слайдер</span>
           </button>
         </div>
       </div>
     </section>
-    <section class="contacts map">
+    <section class="contacts map" data-test="contacts">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__description">Приглашаем<br>к сотрудничеству дилеров!</p>
-        <p class="contacts__adress contacts__adress--street">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="contacts__adress contacts__adress--city">Санкт-Петербург</p>
+        <address class="contacts__adress">
+          <p class="contacts__adress-description">ул. Большая Конюшенная, д. 19/8</p>
+          <p class="contacts__adress-description">Санкт-Петербург</p>
+        </address>
       </div>
       <div class="map__wrapper">
         <picture>
@@ -133,12 +141,13 @@
           <source width="768" height="400" type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x">
           <img class="map__location" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Карта с местоположением офиса">
         </picture>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4753.526179166685!2d30.32355764841993!3d59.93858748165086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1716911425965!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
-  <footer class="main-footer">
+  <footer class="main-footer" data-test="footer">
     <div class="main-footer__wrapper">
-      <a class="logo" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span>
+      <a class="main-footer-logo" href="index.html"><span class="visually-hidden">«Кэт энерджи»</span>
         <img class="main-footer__logo-name" src="images/logo/logo-text.svg" width="128" height="24" alt="Cat Energy">
       </a>
       <ul class="main-footer-list">
